retorte laboratories (retorte.ch) IntervalMusicCompositor change log
--------------------------------------------------------------------------------

2023-xx-xx  2.11.6 [not yet released]
--------------------------------------------------------------------------------
IMP         Upgrades the bundled runtime to Java 21.


2023-09-03  2.11.5
--------------------------------------------------------------------------------
IMP  #68    Adds version for Apple AArch64 (aka Arm64, i.e. M1 etc.) architecture.
FIX  #69    Compilation aborts if output filename is too long.


2022-10-15  2.11.4
--------------------------------------------------------------------------------
FIX         Branding background image not displayed on clean startup.
FIX  #67    Crash when choosing output directory with localized desktop folder on Linux.


2022-03-29  2.11.3
--------------------------------------------------------------------------------
FIX  #65    Self-Upgrade: Wrong root directory chosen on Linux.
FIX  #66    Crash when user has old assistive technology config file in system.


2021-11-13  2.11.2
--------------------------------------------------------------------------------
FIX  #64    Self-Upgrade: Downloading new version fails with 'handshake failure'.


2021-11-12  2.11.1
--------------------------------------------------------------------------------
FIX  #63    Crash when changing compilation parameters with empty track list.


2021-10-31  2.11.0
--------------------------------------------------------------------------------
ADD  #28    Streamlines upgrade process by adding one-click-updater.
ADD  #49    Adds mailto button to error dialog.
IMP         Upgrades the bundled runtime to Java 17.
IMP  #55    Increases sound effect fade in duration to .4 seconds (from .2 s).
FIX         'Too long' indicator in list overrides all other states, even errors.
FIX  #62    Tracks in the current directory are not anymore added automatically.


2021-07-11  2.10.0