@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sysinfo = "0.26.0"
+sysinfo = "0.29.9"
 druid = "0.7.0"
+dircpy = "0.3.15"
+chrono = "0.4"
